[tool.poetry]
name = "ethscanner"
version = "0.1.0"
description = ""
authors = ["Ghost0x <me@ghost0x.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
bip44 = "^0.1.4"
eth-account = "^0.10.0"
coincurve = "^18.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
